# openCapif

./: Makefile  README.md  get_certs.sh  meson.build  opencapif_process  tmp
certificates/: aamonvi_AEF.crt  aamonvi_AMF.crt  aamonvi_APF.crt  aamonvi_aef.csr  aamonvi_aef.key  aamonvi_amf.csr  aamonvi_amf.key  aamonvi_apf.csr  aamonvi_apf.key  aaron_AEF.crt  aaron_AMF.crt  aaron_APF.crt  aaron_aef.csr  aaron_aef.key  aaron_amf.csr  aaron_amf.key  aaron_apf.csr  aaron_apf.key  ca_capifcore.crt  ca_register.crt
include/: create_user.h  delete_api.h  delete_provider.h  delete_user.h  general_utils.h  getauth.h  opencapif_process.h  publish_api.h  register_provider.h  retrieve_apis.h
json/: api_service.json  create_user.json  provider_details.json
src/: create_user.c  delete_api.c  delete_provider.c  delete_user.c  general_utils.c  getauth.c  opencapif_process.c  publish_api.c  register_provider.c  retrieve_apis.c
